one round of reviews, added some images, ...

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,21 @@
-@article{nyawc,
-	author		= {Tijme Gommers},
-	title		= {A web application crawler for bug bounty hunting},
-	year		= {2017},
-	howpublished	= "\url{https://finnwea.com/blog/a-web-application-crawler-for-bug-bounty-hunting/}"
+@misc{nakamoto2008bitcoin,
+  title={Bitcoin: A peer-to-peer electronic cash system},
+  author={Nakamoto, Satoshi},
+  year={2008}
+}
+
+
+@misc{monero,
+  title = {{MONERO} Private Digital Currency},
+ author = {Monero Team},
+  howpublished = {\url{https://getmonero.org/}},
+  note = {Accessed: 2017-11-20}
+}
+
+
+@misc{coinhive,
+  title = {{coinhive} Monetize Your Business With Your Users' CPU Power},
+ author = {coinhive},
+  howpublished = {\url{https://coinhive.com/}},
+  note = {Accessed: 2017-11-20}
 }
