--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 
 \begin{document}
 
+
 	\pagenumbering{gobble}
 
 	\include{titlepage}
@@ -32,8 +33,9 @@
 %	\pagenumbering{roman}
 %	\setcounter{page}{1}
 %	
-%	\phantomsection 
-%	\addcontentsline{toc}{chapter}{Bibliography} 
+	\phantomsection 
+	\addcontentsline{toc}{chapter}{Bibliography} 
+
 	\bibliography{references}
 
 %	\include{appendices}
