--- a/references.bib
+++ b/references.bib
@@ -7,15 +7,17 @@
 
 @misc{monero,
   title = {{MONERO} Private Digital Currency},
- author = {Monero Team},
+ author = {Monero},
   howpublished = {\url{https://getmonero.org/}},
-  note = {Accessed: 2017-11-20}
+  note = {Accessed: 2017-11-20},
+  year={2014}
 }
 
 
 @misc{coinhive,
-  title = {{coinhive} Monetize Your Business With Your Users' CPU Power},
- author = {coinhive},
+  title = {{Coinhive} Monetize Your Business With Your Users CPU Power},
+ author = {Coinhive},
   howpublished = {\url{https://coinhive.com/}},
-  note = {Accessed: 2017-11-20}
+  note = {Accessed: 2017-11-20},
+  year={2017}
 }
