--- a/references.bib
+++ b/references.bib
@@ -21,3 +21,42 @@
   note = {Accessed: 2017-11-20},
   year={2017}
 }
+
+
+@misc{coinmarketcap,
+  title = {Global Charts},
+ author = {Coinmarketcap},
+  howpublished = {\url{https://coinmarketcap.com/}},
+  note = {Accessed: 2017-11-20},
+  year={2017}
+}
+
+
+@misc{showtimehive,
+  title = {Showtime websites secretly mined user CPU for cryptocurrency},
+ author = {The Verge},
+  howpublished = {\url{https://www.theverge.com/2017/9/26/16367620/showtime-cpu-cryptocurrency-monero-coinhive}},
+  note = {Accessed: 2017-11-20},
+  year={2017}
+}
+
+
+@misc{piratesbayhive,
+  title = {Browser-Based Mining Malware Found on Pirate Bay, Others},
+ author = {ExtremeTech},
+  howpublished = {\url{https://www.extremetech.com/internet/255971-browser-based-cryptocurrency-malware-appears-online-pirate-bay}},
+  note = {Accessed: 2017-11-20},
+  year={2017}
+}
+
+
+
+@misc{blockchaininfohashrate,
+  title = {Bitcoin hash rate},
+ author = {Blockchain.info},
+  howpublished = {\url{https://blockchain.info/charts/hash-rate}},
+  note = {Accessed: 2017-11-20},
+  year={2017}
+}
+
+
