fix more citations and footnotes

--- a/references.bib
+++ b/references.bib
@@ -59,6 +59,31 @@
   year={2017}
 }
 
+@misc{cryptoknight,
+  title = {CryptoNote Technology},
+ author = {Cryptonote},
+  howpublished = {\url{https://cryptonote.org/inside.php#equal-proof-of-work}},
+  note = {Accessed: 2017-11-20},
+  year={2017}
+}
+
+
+
+@misc{van2013cryptonote,
+  title={Cryptonote v 2. 0},
+  author={van Saberhagen, Nicolas},
+  year={2013},
+  howpublished = {\url{https://bytecoin.org/old/whitepaper.pdf}},
+}
+
+
+@misc{coinhivecopycats,
+  title={Coinhive Hacked and Launches New Opt-In Service},
+  author={Deep Dot Web},
+  year={2017},
+  howpublished = {\url{https://www.deepdotweb.com/2017/11/11/coinhive-hacked-launches-new-opt-service/}},
+}
+
 
  @InProceedings{censys15,
         author = {Zakir Durumeric and David Adrian and Ariana Mirian and Michael Bailey and J. Alex Halderman},
