some experiment pictures and some other minor changes

--- a/references.bib
+++ b/references.bib
@@ -81,8 +81,17 @@
   title={Coinhive Hacked and Launches New Opt-In Service},
   author={Deep Dot Web},
   year={2017},
-  howpublished = {\url{https://www.deepdotweb.com/2017/11/11/coinhive-hacked-launches-new-opt-service/}},
+  howpublished = {\url{https://www.deepdotweb.com/2017/11/11/coinhive-hacked-launches-new-opt-service/}}
 }
+
+
+@misc{checkpoint,
+  title={October’s Most Wanted Malware: Cryptocurrency Mining Presents New Threat},
+  author={Check Point Research Team},
+  year={2017},
+  howpublished = {\url{https://blog.checkpoint.com/2017/11/13/octobers-wanted-malware-cryptocurrency-mining-presents-new-threat/}}
+}
+
 
 
  @InProceedings{censys15,
