fix citations and quatations

--- a/references.bib
+++ b/references.bib
@@ -49,7 +49,13 @@
   year={2017}
 }
 
-
+@misc{piratesbayblog,
+  title = {The galaxys most resilient bittorrent site},
+ author = {The Pirate Bay},
+  howpublished = {\url{https://thepiratebay.org/blog/242}},
+  note = {Accessed: 2017-11-20},
+  year={2017}
+}
 
 @misc{blockchaininfohashrate,
   title = {Bitcoin hash rate},
@@ -68,6 +74,13 @@
 }
 
 
+@misc{gaurdianelectricity,
+  title = {Ads dont work so websites are using your electricity to pay the bills},
+ author = {The Guardian},
+  howpublished = {\url{https://www.theguardian.com/technology/2017/sep/27/pirate-bay-showtime-ads-websites-electricity-pay-bills-cryptocurrency-bitcoin}},
+  note = {Accessed: 2017-11-20},
+  year={2017}
+}
 
 @misc{van2013cryptonote,
   title={Cryptonote v 2. 0},
@@ -76,6 +89,23 @@
   howpublished = {\url{https://bytecoin.org/old/whitepaper.pdf}},
 }
 
+
+@misc{registerufcmonero,
+  title={Lets get ready to grumble! UFC secretly choke slams browsers with Monero miners},
+  author={The Register},
+  year={2017},
+  howpublished = {\url{https://www.theregister.co.uk/2017/11/07/ufc_coin_hive/}},
+}
+
+
+@misc{eucookie,
+  title={Cookies},
+  author={European Commission},
+  year={2011},
+  howpublished = {\url{http://ec.europa.eu/ipg/basics/legal/cookies/index_en.htm}},
+  note = {Accessed: 2017-12-08},
+}
+The Cookie Law Explained - https://www.cookielaw.org/the-cookie-law/
 
 @misc{coinhivecopycats,
   title={Coinhive Hacked and Launches New Opt-In Service},
@@ -93,6 +123,14 @@
 }
 
 
+@misc{bbcmintcrypto,
+  title={Websites hacked to mint crypto-cash},
+  author={BBC},
+  year={2017},
+  howpublished = {\url{http://www.bbc.com/news/technology-41518351}}
+}
+
+ - http://www.bbc.com/news/technology-41518351
 
  @InProceedings{censys15,
         author = {Zakir Durumeric and David Adrian and Ariana Mirian and Michael Bailey and J. Alex Halderman},
