add security discussion

--- a/references.bib
+++ b/references.bib
@@ -34,12 +34,20 @@
 
 @misc{showtimehive,
   title = {Showtime websites secretly mined user CPU for cryptocurrency},
- author = {The Verge},
+ author = {TheVerge},
   howpublished = {\url{https://www.theverge.com/2017/9/26/16367620/showtime-cpu-cryptocurrency-monero-coinhive}},
   note = {Accessed: 2017-11-20},
   year={2017}
 }
 
+
+@misc{vergeadinjection,
+  title = {Hotel caught injecting advertising into webpages on complimentary Wi-Fi network},
+ author = {TheVerge},
+  howpublished = {\url{https://www.theverge.com/2012/4/7/2931600/hotel-caught-injecting-advertising-into-web-pages-on-complimentary-wi}},
+  note = {Accessed: 2017-12-08},
+  year={2012}
+}
 
 @misc{piratesbayhive,
   title = {Browser-Based Mining Malware Found on Pirate Bay, Others},
@@ -51,7 +59,7 @@
 
 @misc{piratesbayblog,
   title = {The galaxys most resilient bittorrent site},
- author = {The Pirate Bay},
+ author = {ThePirateBay},
   howpublished = {\url{https://thepiratebay.org/blog/242}},
   note = {Accessed: 2017-11-20},
   year={2017}
@@ -76,7 +84,7 @@
 
 @misc{gaurdianelectricity,
   title = {Ads dont work so websites are using your electricity to pay the bills},
- author = {The Guardian},
+ author = {TheGuardian},
   howpublished = {\url{https://www.theguardian.com/technology/2017/sep/27/pirate-bay-showtime-ads-websites-electricity-pay-bills-cryptocurrency-bitcoin}},
   note = {Accessed: 2017-11-20},
   year={2017}
@@ -92,24 +100,22 @@
 
 @misc{registerufcmonero,
   title={Lets get ready to grumble! UFC secretly choke slams browsers with Monero miners},
-  author={The Register},
+  author={TheRegister},
   year={2017},
   howpublished = {\url{https://www.theregister.co.uk/2017/11/07/ufc_coin_hive/}},
 }
 
-
 @misc{eucookie,
   title={Cookies},
-  author={European Commission},
+  author={European-Commission},
   year={2011},
   howpublished = {\url{http://ec.europa.eu/ipg/basics/legal/cookies/index_en.htm}},
   note = {Accessed: 2017-12-08},
 }
-The Cookie Law Explained - https://www.cookielaw.org/the-cookie-law/
 
 @misc{coinhivecopycats,
   title={Coinhive Hacked and Launches New Opt-In Service},
-  author={Deep Dot Web},
+  author={DeepDotWeb},
   year={2017},
   howpublished = {\url{https://www.deepdotweb.com/2017/11/11/coinhive-hacked-launches-new-opt-service/}}
 }
@@ -117,7 +123,7 @@ The Cookie Law Explained - https://www.cookielaw.org/the-cookie-law/
 
 @misc{checkpoint,
   title={October’s Most Wanted Malware: Cryptocurrency Mining Presents New Threat},
-  author={Check Point Research Team},
+  author={CheckPointResearchTeam},
   year={2017},
   howpublished = {\url{https://blog.checkpoint.com/2017/11/13/octobers-wanted-malware-cryptocurrency-mining-presents-new-threat/}}
 }
@@ -130,7 +136,6 @@ The Cookie Law Explained - https://www.cookielaw.org/the-cookie-law/
   howpublished = {\url{http://www.bbc.com/news/technology-41518351}}
 }
 
- - http://www.bbc.com/news/technology-41518351
 
  @InProceedings{censys15,
         author = {Zakir Durumeric and David Adrian and Ariana Mirian and Michael Bailey and J. Alex Halderman},
