--- a/references.bib
+++ b/references.bib
@@ -49,6 +49,24 @@
   year={2012}
 }
 
+
+@misc{bleepingcomputerminers,
+  title = {The Internet Is Ride with In-Browser Miners and It is Getting Worse Each Day},
+ author = {BleepingComputer},
+  howpublished = {\url{https://www.bleepingcomputer.com/news/security/the-internet-is-rife-with-in-browser-miners-and-its-getting-worse-each-day/}},
+  note = {Accessed: 2017-12-08},
+  year={2012}
+}
+
+
+@misc{carlcryptoads,
+  title = {Could cryptocurrency kill online advertising?},
+ author = {Carl Whalley},
+  howpublished = {\url{https://www.linkedin.com/pulse/could-cryptocurrency-kill-online-advertising-carl-whalley/}},
+  note = {Accessed: 2017-12-08},
+  year={2012}
+}
+
 @misc{piratesbayhive,
   title = {Browser-Based Mining Malware Found on Pirate Bay, Others},
  author = {ExtremeTech},
