almost final draft

--- a/main.tex
+++ b/main.tex
@@ -33,8 +33,8 @@
 %	\pagenumbering{roman}
 %	\setcounter{page}{1}
 %	
-	\phantomsection 
-	\addcontentsline{toc}{chapter}{Bibliography} 
+	%\phantomsection 
+	%\addcontentsline{toc}{chapter}{Bibliography} 
 
 	\bibliography{references}
 
