--- a/config/globals.tex
+++ b/config/globals.tex
@@ -3,6 +3,6 @@
 \newcommand{\papersupervisor}{Jeremy \textsc{Clark}}
 \newcommand{\paperuniversity}{Concordia University}
 
-\newcommand{\papertitle}{Case of hijacking user`s CPU - Monero Browser Miner}
+\newcommand{\papertitle}{Cryptojacking user`s CPU - Monero Browser Miner}
 \newcommand{\papermajorheading}{Information Security}
 \newcommand{\paperminorheading}{INSE6630 - Bitcoin and Blockchain Technology}
