add LiveHelpNow incident and some other changes

--- a/references.bib
+++ b/references.bib
@@ -108,6 +108,16 @@
   year={2017}
 }
 
+
+@misc{chatsupporthack,
+  title = {Security incident Nov 23rd, 2017},
+ author = {LiveHelpNow},
+  howpublished = {\url{https://blog.livehelpnow.net/security-incident-nov-23rd-2017/}},
+  note = {Accessed: 2017-12-14},
+  year={2017}
+}
+
+
 @misc{van2013cryptonote,
   title={Cryptonote v 2. 0},
   author={van Saberhagen, Nicolas},
