fix spacing and some citations

--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,9 @@
 
 	\pagenumbering{arabic}
 
+	\titlespacing{\section}{1pt}{\parskip}{-\parskip}
+	\titlespacing{\subsection}{0pt}{\parskip}{-\parskip}
+
 	\include{chapters/main_text}
 %	\include{chapters/example_math}
 %	\include{chapters/example_code}
