--- a/config/globals.tex
+++ b/config/globals.tex
@@ -6,3 +6,75 @@
 \newcommand{\papertitle}{Cryptojacking User`s CPU - Monero Browser Mining}
 \newcommand{\papermajorheading}{Information Security}
 \newcommand{\paperminorheading}{INSE6630 - Bitcoin and Blockchain Technology}
+
+
+
+
+%------------------------Custom Commands----------------------%
+
+% = = = Latin Short-forms (ie, eg, etc, et al)
+\usepackage{xspace}
+\newcommand{\etal}{\textit{et al.}\xspace}
+\newcommand{\etc}{\textit{etc.}\xspace}
+\newcommand{\ie}{\textit{i.e.,}\xspace}
+\newcommand{\eg}{\textit{e.g.,}\xspace}
+\newcommand{\cf}{\textit{cf.}\xspace}
+\newcommand{\supra}{\textit{Supra}\xspace}
+
+% = = = Paragraphs in IEEE template
+\renewcommand\paragraph[1]{\smallskip\noindent\textbf{#1.}}
+
+% = = = Arrow -> (\lt)
+\newcommand{\lt}{$\rightarrow$\xspace}
+
+% = = = Keywords (kw)
+\newcommand{\kw}[1]{\textsf{#1}}
+
+% = = = Colored text (textblue)
+\newcommand{\textblue}[1]{\textcolor{blue}{#1}}
+\newcommand{\fixme}[1]{\textcolor{magenta}{#1}}
+
+% = = = Compact Lists (compactlist, compactlistn)
+\newenvironment{compactlist}
+  {\begin{itemize} 
+  \setlength{\itemsep}{0pt} 
+  \setlength{\parskip}{0pt}} 
+  {\end{itemize}}
+  
+\newenvironment{compactlistn}
+  {\begin{enumerate} 
+  \setlength{\itemsep}{0pt} 
+  \setlength{\parskip}{0pt}} 
+  {\end{enumerate}}
+  
+\renewcommand{\labelitemi}{$\bullet$}
+  
+
+%------------------------Crypto----------------------%  
+
+% = = = Zp, Gq and Zq
+\newcommand{\Zp}{\mathbb{Z}^{*}_{p}}
+\newcommand{\Zq}{\mathbb{Z}_{q}}
+\newcommand{\Gq}{\mathbb{G}_{q}}
+
+% = = = Encryption, etc.
+\newcommand{\Enc}[1]{\mathsf{Enc}(#1)}
+\newcommand{\EncB}[1]{\llbracket #1 \rrbracket}
+\newcommand{\ReRand}[1]{\mathsf{ReRand}(#1)}
+\newcommand{\Hash}[1]{\mathcal{H}(#1)}
+\newcommand{\Sign}[1]{\mathsf{Sig}(#1)}
+\newcommand{\Comm}[1]{\mathsf{Comm}(#1)}
+\newcommand{\Open}[1]{\mathsf{Open}(#1)}
+
+% = = = Tuples
+\newcommand{\tuple}[1]{\left \langle #1 \right \rangle}
+
+
+%-------------------Custom for Paper----------------------%
+
+% = = = Name
+
+
+% = = = = = = = = = = = = Autoref = = = = = = = = = = = = = = = = = = = = = = %
+\def\sectionautorefname{Section}
+\def\subfloatautorefname{Figure}
