some on cryptojacking and how coinhive works

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -10,6 +10,7 @@ Bitcoin ~\cite{nakamoto2008bitcoin} emerged almost a decade ago as an open sourc
 \end{center}
 \end{figure}
 
+
 The graph above shows how the searches for ``browser mining'' have changed since Bitcoin was launched. Search interest seems to have piqued during price surges, which culminated with Bitcoin crossing \$1000 USD for the first time in December 2013. Soon after Bitcoin`s first major crash searches consistently waned until a recent large spike, which is more than 4 times the lifetime average. The waning period before the recent surge could be attributed to the advent of ASIC usage for Bitcoin mining, and the surge is likely due to the revival of browser mining for non-Bitcoin currencies that have gained a sizeable market capitalization. As a result, websites like ThePirateBay.org ~\cite{piratesbayhive} experimented with browser mining as a way to add a new revenue stream, while others like Showtime.com ~\cite{showtimehive} claimed they had the code injected after they were discovered.
 
 \section{Egalitarian Proof-of-Work}
@@ -24,10 +25,16 @@ Bitcoin uses SHA-256 for its hash-based proof-of-work algorithm, which is a CPU-
 
 Satoshi Nakamoto’s original philosophy and intention for Bitcoin was “one-CPU-one-vote”~\cite{nakamoto2008bitcoin}, which CryptoNight attempts to enforce. In CryptoNight, users vote for the right order of transactions and honest money supply distribution with their CPU power, so the more CPU cores they have the more voting power they acquire. Since CPUs are relatively affordable and accessible, it follows that most users will have approximately equal voting rights. Then by relying on random access to a slow memory and emphasizing latency dependence, it is ensured that proof-of-work is largely controlled by CPUs instead of GPUs or ASICs. This is done by having every new block depended on the previous block’s solution, which must be kept in memory. This algorithm requires approximately 2MB per instance, which fits in the L3 cache of modern processors. Over the course of the next few years, these L3 cache sizes should become mainstream and allow more CPUs, and thus users, to vote in Monero`s ecosystem. It has also been shown that ASICs cannot handle more than 1MB of internal memory, which is less than the size of memory required to calculate a new block. GPUs are also at a disadvantage since GDDR5 memory, which are used in modern GPUs and considered one of the fastest types of memory, is notably slower than L3 cache~\cite{van2013cryptonote}.  
 
-\section{Browser Mining}
-The concept of browser mining can be described as accessing CPU processing power through the JavaScript programming language on a web browser instead of a standalone native application. This allows for more scalability as there is no need to install any additional software on a computer with an internet connection. In the early days of cryptocurrency mining, there was a rise in Bitcoin JavaScript miners such as JSMiner\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}}(2011) and MineCrunch\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}}(2014). MineCrunch was the more successful of the two since it had a more successful publicity campaign, and its developers maintained an active online presence. Based on the developer claims, the JavaScript miner was well optimized, but worked 1.5x slower than native applications for CPU mining such as CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}. However, as the hashing power of the Bitcoin network increased the mining difficulty similarly increased, and mining bitcoins on CPUs became unprofitable. As a result, developers stopped maintaining the codebase of such miners.
+\section{In-Browser Mining}
+In-Browser Mining, Also knowns as Cryptojacking, is defined as stealth use of user's resources (e.g. CPU) in the background to mine cryptocurrencies instead of a standalone native application. In this paper focus is on in-browser cryptojacking, e.g. Javascript code running on websites. The resources consumption could be really high to noticeably effect users` computer performance and even electricity bill. Users` consent is where makes cryptojacking different than regular mining software.
+
+This allows for more scalability as there is no need to install any additional software on a computer with an internet connection. In the early days of cryptocurrency mining, there was a rise in Bitcoin JavaScript miners such as JSMiner\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}}(2011) and MineCrunch\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}}(2014). MineCrunch was the more successful of the two since it had a more successful publicity campaign, and its developers maintained an active online presence. Based on the developer claims, the JavaScript miner was well optimized, but worked 1.5x slower than native applications for CPU mining such as CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}. However, as the hashing power of the Bitcoin network increased the mining difficulty similarly increased, and mining bitcoins on CPUs became unprofitable. As a result, developers stopped maintaining the codebase of such miners.
 \\
 Monero built on its early success and continued to gain in popularity over the years, which caught the attention of some developers who decided to revisit the idea of browser mining. One of the earliest efforts appeared in September 2017 and was called Coinhive~\cite{coinhive}. Soon after a competitor named Crypto-Loot\footnote{Crypto-Loot - A web Browser Miner | Traffic Miner | CoinHive Alternative \url{https://crypto-loot.com/}} emerged. Both websites provided APIs\footnote{Application programming interface} to developers for implementing browser mining on their websites that used their visitors` CPU resources to mine Monero. A portion of mined Monero would go back to the API developer, and the rest would be kept by the website. Not long after their early success, several copycats appeared such as Coin-Have and PPoi~\cite{coinhivecopycats} to take part in the reborn practice. It even inspired a new coin specifically designed for browser mining named JSECoin\footnote{JSEcoin – Website Cryptocurrency Mining \url{https://jsecoin.com/}}, which has yet to find an audience. These developments took place over the course of a few weeks, which signalled the renewed success of browser mining. However, Coinhive`s approach as a legitimate group set it apart from its peers and established itself as the leader in the space. They also launched separate services such as proof-of-work CAPTCHAs and short-links, which could be used to prevent spam while mining Monero~\cite{coinhive}.
+
+%TODO: explain what mining pool is? More explanations on how they work?
+Coinhive and other similar websites, are simply Monero mining pools which offer API\footnote{Application programming interface} and have implemented a browser client in Javascript. The ease of use of such clients is one of the main reasons these services had such a big turn out. 
+
 \section{State of Affairs}
 In order to find out how browser mining is changing internet use, the approach taken was to find measurements of the impact it causes. One approach was to see what the search interest over time for such services is. 
 
