added timeline - still looks a bit weird

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -36,6 +36,9 @@ Monero built on its early success and continued to gain in popularity over the y
 Coinhive and other similar websites, are simply Monero mining pools which offer API\footnote{Application programming interface} and have implemented a browser client in Javascript. The ease of use of such clients is one of the main reasons these services had such a big turn out. 
 
 \section{State of Affairs}
+
+\input{sections/timeline}
+
 In order to find out how browser mining is changing internet use, the approach taken was to find measurements of the impact it causes. One approach was to see what the search interest over time for such services is. 
 
 %\vspace*{-1mm}
