fixed timeline dates

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -35,9 +35,11 @@ Monero built on its early success and continued to gain in popularity over the y
 %TODO: explain what mining pool is? More explanations on how they work?
 Coinhive and other similar websites, are simply Monero mining pools which offer API\footnote{Application programming interface} and have implemented a browser client in Javascript. The ease of use of such clients is one of the main reasons these services had such a big turn out. 
 
+\input{sections/timeline}
+
+
 \section{State of Affairs}
 
-\input{sections/timeline}
 
 In order to find out how browser mining is changing internet use, the approach taken was to find measurements of the impact it causes. One approach was to see what the search interest over time for such services is. 
 
@@ -97,7 +99,7 @@ Most of these scripts discovered were defaulted to use around 25\% of user`s CPU
 
 \subsection{\textbf{Profitability Experiment}}
 \label{profitabilitexperiment}
-On an experiment conducted over period of three months a domain parking service was used to deploy the browser mining script to more than 11,000 websites\footnote{Thanks to Faraz Fallahi \url{https://github.com/fffaraz}} . Over 97,000 users visited these websites for an average of 24 seconds per session.
+By reaching out to one of the biggest coinhive campaigns operator, which was a domain parking service and was running coinhive script on over 11,000 parked websites, conducted over period of three months, we were able to gather some data to estimate profitability for websites with high traffic but short visits \footnote{Thanks to Faraz Fallahi \url{https://github.com/fffaraz}}. Over 97,000 users visited these websites for an average of 24 seconds per session.
 
 %\vspace*{-1mm}
 \begin{center}
