--- a/Paper/setup/packages.tex
+++ b/Paper/setup/packages.tex
@@ -34,6 +34,7 @@
 \usepackage{color}
 \usepackage[hyphens]{url}
 \usepackage[pdftitle=Title,pdfauthor=Anonymous]{hyperref}
+\usepackage{xcolor}
 
 % = = = Listings
 \usepackage{listings}
