--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -13,28 +13,13 @@
 
 
 \begin{document}
-\title{Title}
-
-\author{
-\IEEEauthorblockN{Jeremy Clark} 
-\IEEEauthorblockA{School of Computer Science\\
-Carleton University\\
-\texttt{\{clark\}@scs.carleton.ca}}
-}
-
-%\IEEEspecialpapernotice{(Systemization of Knowledge)}
-
+\title{A first look at Cryptojacking}
+\author{}
 \maketitle
 
 %====================================================================
 
-\begin{abstract}
 \input{sections/abstract}
-\end{abstract}
-
-\begin{IEEEkeywords}
-authentication; 
-\end{IEEEkeywords}
 
 \IEEEpeerreviewmaketitle
 
