--- a/Paper/sections/abstract.tex
+++ b/Paper/sections/abstract.tex
@@ -1,2 +1,9 @@
-Abstract goes here. 
+% !TEX root = ../main.tex
 
+\begin{abstract}
+asdf
+\end{abstract}
+
+\begin{IEEEkeywords}
+authentication; 
+\end{IEEEkeywords}
