--- a/Paper/sections/timeline.tex
+++ b/Paper/sections/timeline.tex
@@ -1,6 +1,8 @@
+% !TEX root = ../main.tex
+
 \newcommand\ytl[2]{
 \parbox[b]{8em}{\hfill{\color{cyan}\bfseries\sffamily #1}~$\cdots$~}\makebox[0pt][c]{$\bullet$}\vrule\quad \parbox[c]{4.5cm}{\vspace{7pt}\color{red!40!black!80}\raggedright\sffamily #2.\\[7pt]}\\[-2pt]}
-\begin{document}
+
 \begin{table}
 \caption{Timeline of Monero and in-browser mining.}
 \centering
